# jungle

./: .gitignore  Cargo.toml  LICENCE  Makefile  README.md
assets/: instructions.md  level1.tmx  map.tmx  tileset.tsx
ios/: Info.plist
jungle.xcodeproj/: project.pbxproj
src/: components.rs  constants.rs  lib.rs  main.rs  map.txt  resources.rs  utils.rs
src/play/: components.rs  constants.rs  mod.rs
src/play/systems/: animation.rs  gameover.rs  mod.rs  movement.rs
src/play/systems/startup/: mod.rs  player.rs  world.rs
src/systems/: action.rs  animation.rs  gameover.rs  mod.rs  movement.rs  startup.rs  ui.rs
src/systems/startup/: mod.rs  player.rs  ui.rs  world.rs
twitter/: collision.excalidraw  twits.md
